--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header>
             <div class="header-top">
             <div class="logo fl">
-                <a href="http://localhost:63342/TenCent/index.html?_ijt=gua01n80tcgp5btem0f1ss966q"><img src="images/logo.png" alt=""></a>
+                <a href="https://zhang337qq.github.io/TenCent/"><img src="images/logo.png" alt=""></a>
             </div>
                 <span></span>
                 <h1>微信学院
