--- a/Wechat.html
+++ b/Wechat.html
@@ -9,7 +9,7 @@
         <header>
             <div class="header-top">
             <div class="logo fl">
-                <a href="https://zhang337qq.github.io/TenCent/"><img src="images/logo.png" alt=""></a>
+                <a href="https://zhang337qq.github.io/Wechat-/"><img src="images/logo.png" alt=""></a>
             </div>
                 <span></span>
                 <h1>微信学院
@@ -30,7 +30,7 @@
         <nav>
             <div class="naver">
             <ul>
-                <li><a href="http://localhost:63342/TenCent/index.html?_ijt=gua01n80tcgp5btem0f1ss966q" class="first">学院首页</a></li><span></span>
+                <li><a href="https://zhang337qq.github.io/TenCent/">学院首页</a></li><span></span>
                 <li><a href="#">微信商学院</a></li><span></span>
                 <li><a href="#">微信技术院</a></li><span></span>
                 <li><a href="#">玩转微信</a></li><span></span>
